# anais_pipeline

./: .gitignore  README.md  main.py  pyproject.toml
dbt_project/: dbt_project.yml
dbt_project/models/: sources.yml
pipeline/: duckdb_pipeline.py  main.py  metadata.yml  pipeline_orchestration.py  postgres_loader.py
pipeline/database_management/: database_pipeline.py  duckdb_pipeline.py  postgres_loader.py
pipeline/orchestration/: pipeline_orchestration.py
pipeline/run/: pipeline_orchestration.py
pipeline/utils/: config.py  csv_management.py  dbt_tools.py  load_yml.py  sftp_sync.py
