[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipeline"
version = "0.1.0"
description = "Package pipeline anais"
authors = [{ name = "Ton Nom", email = "ton.email@exemple.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "duckdb (==1.2.0)",
    "dbt-core (==1.9.2)",
    "dbt-duckdb (==1.9.2)",
    "pandas (==2.2.3)",
    "dlt (==1.6.1)",
    "dotenv>=0.9.9",
    "sqlalchemy>=2.0.41",
    "paramiko>=3.5.1",
    "psycopg2>=2.9.10",
    "dbt-postgres>=1.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]